# git-watch

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: arguments.hpp  path.hpp
src/: arguments.cpp  main.cpp  path.cpp
